--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "repository": {
